Terraform/development/aws/vpc/sg.tf
resource "aws_security_group" "tf_sg" {
  name        = "tf-sg"
  description = "Created with Terraform. Allows ICMP, HTTP, HTTPS and SSH"
  vpc_id      = aws_vpc.terraform-vpc.id

  #Convert to ingress map
  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # Create egress map
}
